Column Definition as ColumnType added, more precise control over input out of of jooq